# convex-py

./: .flake8  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  advanced_rust_wrapper_example.py  error_handling_example.py  example.py  py_client.pyi  pyproject.toml  rust_wrapper_example.py  simple_example.py  subscription_example.py
.github/workflows/: python-client-build.yml
convex/: __init__.py  errors.py  values.py
python/_convex/: __init__.py  _convex.pyi  int64.py
python/convex/: __init__.py  http_client.py  values.py
src/: lib.rs  query_result.rs  subscription.rs
src/client/: mod.rs
tests/: test_convex.py  test_readme.py  test_simple.py  test_values.py  test_version.py
