[package]
name = "_convex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "_convex"
crate-type = [ "cdylib" ]

[dependencies]
convex = { path = "../convex", version = "=0.8.1", default-features = false }
futures = { version = "0.3" }
parking_lot = { version = "0.12" }
pyo3 = { features = [ "abi3", "abi3-py39" ], version = "0.23.3" }
pyo3-async-runtimes = { version = "0.23.0", features = [ "tokio-runtime" ] }
tokio = { features = [ "full" ], version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { features = [ "env-filter" ], version = "0.3.17" }

[dev-dependencies]
convex = { path = "../convex", version = "=0.8.1", default-features = false, features = [ "testing" ] }
tracing-subscriber = { features = [ "env-filter" ], version = "0.3.17" }

[build-dependencies]
pyo3-build-config = { version = "0.23.3" }

[features]
default = [ "native-tls-vendored" ]
native-tls = [ "convex/native-tls" ]
native-tls-vendored = [ "convex/native-tls-vendored" ]
rustls-tls-native-roots = [ "convex/rustls-tls-native-roots" ]
rustls-tls-webpki-roots = [ "convex/rustls-tls-webpki-roots" ]
