[package]
name = "_convex"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "_convex"
crate-type = [ "cdylib" ]

[features]
default = [ "native-tls-vendored" ]
native-tls = [ "convex/native-tls" ]
native-tls-vendored = [ "convex/native-tls-vendored" ]
rustls-tls-native-roots = [ "convex/rustls-tls-native-roots" ]
rustls-tls-webpki-roots = [ "convex/rustls-tls-webpki-roots" ]

[dependencies]
convex = { version = "=0.10.3", default-features = false }
futures = { version = "0.3" }
parking_lot = { version = "0.12" }
pyo3 = { features = [ "abi3", "abi3-py39" ], version = "0.27" }
pyo3-async-runtimes = { version = "0.27", features = [ "tokio-runtime" ] }
tokio = { features = [ "full" ], version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { features = [ "env-filter" ], version = "0.3.17" }

[build-dependencies]
pyo3-build-config = { version = "0.27" }

[dev-dependencies]
convex = { version = "=0.10.3", default-features = false, features = [ "testing" ] }
tracing-subscriber = { features = [ "env-filter" ], version = "0.3.17" }

[lints.rust]
unused_extern_crates = "warn"

[lints.clippy]
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_enum_variant = "allow"
manual_is_multiple_of = "allow"
manual_map = "allow"
new_without_default = "allow"
op_ref = "allow"
ptr_arg = "allow"
result_large_err = "allow"
single_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
upper_case_acronyms = "allow"
useless_format = "allow"
useless_vec = "allow"
