[project]
name = "convex"
version = "0.7.0"  # Also update in __init__.py
description = "Python client for the reactive backend-as-a-service Convex."
authors = [
  { name = "Convex, Inc", email = "support@convex.dev" },
]
requires-python = ">=3.9.2"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = "Apache-2.0"

dependencies = [
    "requests>=2.32.0,<3",
]

[project.urls]
homepage = "https://convex.dev"
repository = "https://github.com/get-convex/convex-py"
documentation = "https://docs.convex.dev"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.2,<2.0",
    "mypy~=1.0",
    "pytest>=8.0.0,<9",
    "pytest-profiling>=1.7.0,<2",
    "twine>=6.0.0,<7",
    "types-requests>=2.27.30,<3",
    "typing-extensions>=4.4.0,<5",
]

[tool.maturin]
python-source = "python"
python-packages = ["convex", "_convex"]
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests",
    "integration",
    "convex"
]

[tool.mypy]
strict = true

[tool.isort]
skip = [".venv"]
